--- a/oop_homework/oop_homework.vcxproj.filters
+++ b/oop_homework/oop_homework.vcxproj.filters
@@ -26,5 +26,8 @@
     <ClInclude Include="MyString.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="operators.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
